--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 100%;
+  max-height: 100%;
   text-align: center;
+}
+
+body {
+  background-image: url(background.png);
+
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
 }
 
 .logo {
