--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,14 @@
   max-width: 100%;
   max-height: 100%;
   text-align: center;
-  background-image: url(https://github.com/PoleVac/My-Site/blob/main/public/background.png?raw=true);
-  height: 100px;
-  background-position: center;
-  background-repeat: repeat;
-  background-size: cover;
 }
 
 body {
+  background-image: url(https://github.com/PoleVac/My-Site/blob/main/public/background.png?raw=true);
+  height: auto;
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
 }
 
 .logo {
