--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 #root {
   max-width: 100%;
-  max-height: 100%;
+  height: auto !important;
   text-align: center;
 }
 
 body {
   background-image: url(https://github.com/PoleVac/My-Site/blob/main/public/background.png?raw=true);
-  height: auto;
+  height: auto !important;
   background-position: center;
   background-repeat: repeat;
   background-size: cover;
